apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__aliases.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: "&generated"
---
result:
  statsReportKey: "# AliasQuery\nquery AliasQuery{enumInputQuery(enumInput:SOME_VALUE_1){enumResponse}enumInputQuery(enumInput:SOME_VALUE_2){enumResponse}enumInputQuery(enumInput:SOME_VALUE_3){enumResponse}}"
  referencedFieldsByType:
    EverythingResponse:
      fieldNames:
        - enumResponse
      isInterface: false
    Query:
      fieldNames:
        - enumInputQuery
      isInterface: false
