apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__anonymous_mutation.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: "&generated"
---
result:
  statsReportKey: "# -\nmutation{noInputMutation{id}}"
  referencedFieldsByType:
    EverythingResponse:
      fieldNames:
        - id
      isInterface: false
    Mutation:
      fieldNames:
        - noInputMutation
      isInterface: false
