apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__anonymous_query@bridge.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: bridge_result
---
result:
  statsReportKey: "# -\n{noInputQuery{id}}"
  referencedFieldsByType:
    EverythingResponse:
      fieldNames:
        - id
      isInterface: false
    Query:
      fieldNames:
        - noInputQuery
      isInterface: false
