apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__anonymous_subscription@bridge.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: bridge_result
---
result:
  statsReportKey: "# -\nsubscription{noInputSubscription{id}}"
  referencedFieldsByType:
    EverythingResponse:
      fieldNames:
        - id
      isInterface: false
    Subscription:
      fieldNames:
        - noInputSubscription
      isInterface: false
