apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__anonymous_subscription@report.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: generated
---
result:
  statsReportKey: "# -\nsubscription{noInputSubscription{id}}"
  referencedFieldsByType:
    EverythingResponse:
      fieldNames:
        - id
      isInterface: false
    Subscription:
      fieldNames:
        - noInputSubscription
      isInterface: false
